--- a/contenido/corporativo.html
+++ b/contenido/corporativo.html
@@ -14,6 +14,42 @@
 
 <body>
 
+    <!-- aside oculto -->
+    <div>
+        <input type="checkbox" id="menu-bar" />
+        <aside class="aside d-flex">
+
+            <ul class="w-100 pt-5">
+                <li>
+                    <a class="text-decoration-none text-white" href="#">CORPORATIVO
+                        <i class='bx bx-chevron-down fs-2'></i>
+                    </a>
+                    <ul class="py-2">
+                        <li class="menu-item">
+                            <a class="text-decoration-none active" href="corporativo.html">Nuestra
+                                hitoria</a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="text-decoration-none" href="compromiso.html">Nuestro
+                                compromiso legal</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="menu-item">
+                    <a class="text-decoration-none" href="sostenibilidad.html">SOSTENIBILIDAD</a>
+                </li>
+                <li class="menu-item">
+                    <a class="text-decoration-none" href="contacto.html">CONTACTANOS</a>
+                </li>
+            </ul>
+
+            <label for="menu-bar" class="close-bar"><img class="w-100" src="../img/close-bold-svgrepo-com.svg"
+                    alt="menu" /></label>
+
+        </aside>
+    </div>
+    <!-- fin aside oculto -->
+
     <div class="container p-0">
 
         <!-- logo-menu -->
@@ -31,8 +67,18 @@
 
             <div class="d-none d-sm-flex justify-content-center">
                 <ul class="d-flex h-100">
-                    <li class="nav-item">
-                        <a class="nav-link active fs-5" href="corporativo.html">Corporativo</a>
+                    <li class="has-submenu" style="position: relative;">
+                        <a class="nav-link fs-5 d-flex active" href="#">Corporativo
+                            <i class='bx bx-chevron-down fs-2'></i>
+                        </a>
+                        <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
+                            <li>
+                                <a class="nav-link active" href="corporativo.html">Nuestra hitoria</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
@@ -54,13 +100,9 @@
                     <ul class="p-0 m-0">
 
                         <li class="has-submenu">
-                            <a class="h-100 p-2" href="#">
+                            <a class="h-100 p-2 d-flex" href="#">
                                 Productos
-                                <svg style="fill: white" xmlns="http://www.w3.org/2000/svg" height="1em"
-                                    viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                    <path
-                                        d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
-                                </svg>
+                                <i class='bx bx-chevron-down fs-2'></i>
                             </a>
                             <ul class="submenu">
                                 <li>
@@ -97,13 +139,13 @@
 
             <section class="mt-5 px-5">
 
-                <div class="row">
-                    <div class="col-4 d-flex justify-content-center align-items-center">
+                <div class="row g-2">
+                    <div class="col-12 col-sm-4 d-flex justify-content-center align-items-center">
                         <div class="circle">
                             <span class="year">2021</span>
                         </div>
                     </div>
-                    <div class="col-8">
+                    <div class="col-12 col-sm-8">
                         <div class="box">
                             <p class="mb-4">
                                 Valoros de Colombia fue creada en el año 2021 con el objetivo de atender la demanda
@@ -128,13 +170,13 @@
 
                 <hr>
 
-                <div class="row">
-                    <div class="col-4 d-flex justify-content-center align-items-center">
+                <div class="row g-2">
+                    <div class="col-12 col-sm-4 d-flex justify-content-center align-items-center">
                         <div class="circle">
                             <span class="year">2022</span>
                         </div>
                     </div>
-                    <div class="col-8">
+                    <div class="col-12 col-sm-8">
                         <p class="mb-4">
                             En el año 2022, iniciamos nuestra gestión comercial a nivel local y nacional
                             encontrando oportunidades de negocio que permitieron incursionar exitosamente
@@ -155,13 +197,13 @@
 
                 <hr>
 
-                <div class="row">
-                    <div class="col-4 d-flex justify-content-center align-items-center">
+                <div class="row g-2">
+                    <div class="col-12 col-sm-4 d-flex justify-content-center align-items-center">
                         <div class="circle">
                             <span class="year">2023</span>
                         </div>
                     </div>
-                    <div class="col-8">
+                    <div class="col-12 col-sm-8">
                         <p class="mb-4">
                             En el año 2023, la compañía se enfoca en desarrollar nuevos productos y servicios
                             que requiera la industria y desarrollar su plan estrategico comercial que le
@@ -232,7 +274,7 @@
                         </p>
 
                     </div>
-                   
+
                 </div>
 
             </section>
