index background img

--- a/contenido/Servicios.html
+++ b/contenido/Servicios.html
@@ -23,7 +23,7 @@
 
             <ul class="w-100 pt-5">
                 <li>
-                    <a class="text-decoration-none" href="#">CORPORATIVO
+                    <a class="text-decoration-none text-white" href="#">CORPORATIVO
                         <i class='bx bx-chevron-down fs-2'></i>
                     </a>
                     <ul class="py-2">
