--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </header>
         <!-- logo-menu -->
 
-        <main class="mx-auto">
+        <main class="mx-auto indexmain">
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
