--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -50,7 +50,7 @@
     </div>
     <!-- fin aside oculto -->
 
-    <div class="container p-0">
+    <div class="container p-0 bg-white">
 
         <!-- logo-menu -->
         <header class="d-flex justify-content-between">
@@ -91,7 +91,7 @@
         </header>
         <!-- logo-menu -->
 
-        <main class="mx-auto">
+        <main class="mx-auto" >
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
@@ -126,9 +126,9 @@
 
                 <h1 class="text-center mb-5">CONTACTO</h1>
 
-                <div class="row mb-5">
+                <div class="row mb-5 text-dark ">
 
-                    <div class="col m-5">
+                    <div class="col m-5 ">
 
                         <h3>Valoros de Colombia</h3>
                         <p><img src="../img/location.png" alt=""> Medellín-Antioquia</p>
@@ -180,17 +180,18 @@
 
                 </div>
 
-
-                <div class="row justify-content-center">
-
+                 <!-- croquis -->
+                <div class="row justify-content-center mb-3">
                     <img class="w-50" src="../img/croquis.png" alt="croquis" />
-
                 </div>
 
 
 
 
             </section>
+
+           
+            
 
         </main>
 
