--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- fin aside oculto -->
 
 
-    <div class="container p-0">
+    <div class="container p-0 mb-0">
 
         <!-- logo-menu -->
         <header class="d-flex justify-content-between m-0 p-0">
@@ -172,26 +172,35 @@
 
 
             <!-- croquis-contacta -->
-            <section class="row mb-5 px-5 m-0">
-                <div class="row">
+            <section class="row px-5">
+                <!-- <div class="row"> -->
 
-                    <div class="col-12 col-sm-7 mb-3">
+                <!-- <div class="col-12 col-sm-7 mb-3">
                         <img class="w-100" src="img/croquis.png" alt="croquis" />
-                    </div>
+                    </div> -->
 
-                    <div class="col-12 col-sm-5 d-flex align-items-center justify-content-center">
-                        <div>
-                            <h3 class="text-center" style="color: #F3B830;">Contacta con nosotros</h3>
+                <div class="d-flex align-items-center justify-content-center my-5">
+                    <div>
+                        <h3 class="text-center" style="color: #F3B830;">Contacta con nosotros</h3>
 
-                            <div class="text-center">
-                                <a href="#"><img class="social-icon" src="img/facebook.svg" alt="facebook" /></a>
+                        <div class="text-center">
+                            <!-- <a href="#"><img class="social-icon" src="img/facebook.svg" alt="facebook" /></a>
                                 <a href="#"><img class="social-icon" src="img/insta.svg" alt="whatsapp" /></a>
-                                <a href="#"><img class="social-icon" src="img/whatsapp-black.svg" alt="whatsapp" /></a>
-                            </div>
+                                <a href="#"><img class="social-icon" src="img/whatsapp-black.svg" alt="whatsapp" /></a> -->
+                            <a href="#" style="color:transparent">
+                                <i class='bx bxl-facebook-square text-white fs-2'></i>
+                            </a>
+                            <a href="#" style="color:transparent">
+                                <i class='bx bxl-whatsapp text-white fs-2'></i>
+                            </a>
+                            <a href="#" style="color:transparent">
+                                <i class='bx bxl-instagram-alt text-white fs-2'></i>
+                            </a>
                         </div>
                     </div>
-
                 </div>
+
+                <!-- </div> -->
 
             </section>
             <!-- croquis-contacta -->
@@ -200,26 +209,6 @@
 
 
 
-        <!-- <footer class="bg-white">
-            <hr class="m-0">
-            <div class="row row-cols-1 row-cols-sm-2 px-5 py-3">
-                <div class="col text-center">
-                    <p>Medellín - Antioquia</p>
-                    <p>Tel.: +604 3629056</p>
-                    <p>Cel/wp: +57 3012784797</p>
-                    <p>info@valoros.co</p>
-                </div>
-
-                <div class="col d-flex justify-content-center align-items-center">
-                    <img src="img/LogoValoros.jpg" alt="logo-valoros" />
-                </div>
-            </div>
-
-            <div class="footer_div2 fs-6 text-white text-center">
-                <p class="py-3">Copyright © 2023 Valoros de Colombia</p>
-            </div>
-
-        </footer> -->
 
         <footer>
             <div class="contact row row-cols-1 row-cols-sm-4 m-0">
