--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -91,7 +91,7 @@
         </header>
         <!-- logo-menu -->
 
-        <main class="mx-auto" >
+        <main class="mx-auto">
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
@@ -126,27 +126,9 @@
 
                 <h1 class="text-center mb-5">CONTACTO</h1>
 
-                <div class="row mb-5 text-dark ">
+                <div class="row mb-5 text-dark">
 
-                    <div class="col m-5 ">
-
-                        <h3>Valoros de Colombia</h3>
-                        <p><img src="../img/location.png" alt=""> Medellín-Antioquia</p>
-                        <p><img src="../img/call.png" alt=""> Tel/wp: +57 3012784797</p>
-                        <p><img src="../img/email.png" alt=""> info@valoros.co</p>
-
-                        <div>
-                            <div class="social_div">
-                                <a href="#"><img style="width: 30px;" src="../img/facebook.svg" alt="facebook" /></a>
-                                <a href="#"><img style="width: 30px;" src="../img/insta.svg" alt="whatsapp" /></a>
-                                <a href="#"><img style="width: 30px;" src="../img/whatsapp-black.svg"
-                                        alt="whatsapp" /></a>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="col">
+                    <div class="col-12 col-sm-6 order-sm-last mb-5">
 
                         <form action="">
                             <div class="mb-3">
@@ -177,21 +159,38 @@
 
 
 
+                    <div class="col-12 col-sm-6">
+
+                        <h3>Valoros de Colombia</h3>
+                        <p><img src="../img/location.png" alt=""> Medellín-Antioquia</p>
+                        <p><img src="../img/call.png" alt=""> Tel/wp: +57 3012784797</p>
+                        <p><img src="../img/email.png" alt=""> info@valoros.co</p>
+
+                        <div>
+                            <div class="social_div">
+                                <a href="#"><img style="width: 30px;" src="../img/facebook.svg" alt="facebook" /></a>
+                                <a href="#"><img style="width: 30px;" src="../img/insta.svg" alt="whatsapp" /></a>
+                                <a href="#"><img style="width: 30px;" src="../img/whatsapp-black.svg"
+                                        alt="whatsapp" /></a>
+                            </div>
+                        </div>
+
+                        <!-- croquis -->
+                        <div class="justify-content-center mt-3">
+                            <img class="w-100" src="../img/croquis.png" alt="croquis" />
+                        </div>
+
+                    </div>
+
 
                 </div>
-
-                 <!-- croquis -->
-                <div class="row justify-content-center mb-3">
-                    <img class="w-50" src="../img/croquis.png" alt="croquis" />
-                </div>
-
 
 
 
             </section>
 
-           
-            
+
+
 
         </main>
 
