--- a/contenido/lineaoro.html
+++ b/contenido/lineaoro.html
@@ -134,22 +134,20 @@
                 <div class="row">
                     <div class="col-12 col-sm-6">
                         <h5>ORO</h5>
-                        <P class="mb-4">
+                        <P >
                             Oro en barra, lamina o granulado.
-                            Pureza de 99,99 certificada.
-                            Consulte información técnica
+                            Pureza de 99,99 certificada.                                                   
                         </P>
+                        <a href="../pdf/Ficha Seguridad Oro.pdf" target="_blank">Consulte información técnica</a>     
 
-                        <h5>CIANURO DE ORO POTASIO</h5>
-                        <P class="mb-4">
-                            Disponible a partir de Enero 2024
-                            Consulte información tecnica
-                        </P>
+                        <h5 class="mt-4">CIANURO DE ORO POTASIO</h5>
+                        <P>Disponible a partir de Enero 2024</P>
+                        <p class="mb-4">Consulte información técnica</p>
 
                         <h5>HILO DE ORO</h5>
-                        <p>Disponible a partir de Enero 2024
-                            Consulte información tecnica
-                        </p>
+                        <p>Disponible a partir de Enero 2024</p>
+                        <p>Consulte información tecnica</p>                            
+                        
                     </div>
                     <div class="col-12 col-sm-6">
                         <img class="w-100 mb-2 rounded" src="../img/IMG_3917.JPEG" alt="">
