--- a/contenido/lineaplata.html
+++ b/contenido/lineaplata.html
@@ -137,25 +137,25 @@
                         <h5>ANODO DE PLATA</h5>
                         <P>
                             Anodo de Plata según especificación del cliente
-                            Pureza de 99,99 certificada
-                            Consulte información técnica
+                            Pureza de 99,99 certificada                            
                         </P>
+                        <p>Consulte información técnica</p>
 
-                        <h5>CIANURO DE PLATA</h5>
+                        <h5 class="mt-3">CIANURO DE PLATA</h5>
                         <P>
                             Cianuro de Plata en polvo
                             Pureza de 99,99 certificada
-                            Concentración de plata 54,2%.
-                            Consulte información técnica
+                            Concentración de plata 54,2%.                           
                         </P>
+                        <a href="../pdf/Ficha de Seguridad Cianuro de Plata.pdf" target="_blank">Consulte información técnica</a>
 
-                        <h5>CIANURO DE PLATA Y POTASIO</h5>
+                        <h5 class="mt-3">CIANURO DE PLATA Y POTASIO</h5>
                         <p>
                             Cianuro de Plata Potasio en polvo
                             Pureza de 99,99 certificada
-                            Concentración de plata 54,2%.
-                            Consulte información tecnica
+                            Concentración de plata 54,2%.                           
                         </p>
+                        <a href="../pdf/Ficha de Seguridad Cianuro de Plata Potasio.pdf" target="_blank">Consulte información técnica</a>
                     </div>
                     <div class="col-12 col-sm-6">
                         <img class="w-100 rounded" src="../img/IMG_9762.JPG" alt="">
@@ -173,20 +173,21 @@
                             Consulte información técnica
                         </P>
 
-                        <h5>NITRATO DE PLATA</h5>
+                        <h5 class="mt-3">NITRATO DE PLATA</h5>
                         <P>
                             Nitrato de Plata para uso industrial
                             Pureza de 99,99 certificada
-                            Concentración de plata 63,5%.
-                            Consulte información técnica
+                            Concentración de plata 63,5%.                            
                         </P>
+                        <a href="../pdf/Ficha de Seguridad Nitrato de Plata.pdf" target="_blank">Consulte información técnica</a>
 
-                        <h5>PLATA PURA</h5>
+                        <h5 class="mt-3" >PLATA PURA</h5>
                         <p>
                             Plata en barra, lamina o granulado.
                             Pureza de 99,99 certificada
                             Consulte información técnica
                         </p>
+                        <a href="../pdf/Ficha de Seguridad Plata Metal.pdf" target="_blank">Consulte información técnica</a>
                     </div>
                     
                     <div class="col-12 col-sm-6 order-sm-first">
